# agentic-collections-fork

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  COLLECTION_SPEC.md  CONTRIBUTING.md  FEDERATION_REQUEST_GUIDE.md  FEDERATION_REVIEW_GUIDE.md  MAINTAINERS  Makefile  README.md  SECURITY.md  SKILL_CHECKLIST.md  SKILL_DESIGN_PRINCIPLES.md  apm.yml  pyproject.toml  test.txt
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/: copilot-instructions.md  gemini-review-prompt.md  pull_request_template.md
catalog/: README.md  README_TEMPLATE.md.j2  collection_page.html.j2  marketplace.yaml  schema.yaml
docs/: FEDERATION_REVIEW_GUIDE.md  README.md  app.js  icons.json  index.html  mcp.json  plugins.json  style-tokens.json  styles.css
marketplace/: rh-agentic-collection.yml
ocp-admin/: .mcp.json  CLAUDE.md  README.md  collection.json  collection.yaml  mcps.json
reports/: ci-violations.json  consistency-audit.json  consistency-audit.md
rh-ai-engineer/: .mcp.json  README.md  collection.json  collection.yaml
rh-automation/: CLAUDE.md  README.md  collection.json  collection.yaml
rh-basic/: CLAUDE.md  README.md  mcps.json
rh-contributor/: CLAUDE.md  README.md
rh-developer/: .mcp.json  CLAUDE.md  README.md  collection.json  collection.yaml  mcps.json
rh-security-validation/: CLAUDE.md
rh-sre/: .mcp.json  CLAUDE.md  DEMO.md  README.md  TODO.md  collection.json  collection.yaml
rh-support-engineer/: README.md  collection.json  collection.yaml
rh-virt/: .mcp.json  CLAUDE.md  README.md  SKILL_TEMPLATE.md  mcps.json  (+2 more)
(+501 files in other folders)
